# toolkit

./: CMakeLists.txt  README.md  gitnore.cpp
audio/: processor.cpp  types.hpp
browser/: browser.cpp  profile.cpp
include/: vectors_test.cpp
include/glooms/: embeddings_test.cpp  vision.hpp
libs/catch2/: aigen.cpp  aigen.hpp  custom_memory.cpp
libs/eigen/: optimizer.cpp  optimizer.hpp
models/: bert.hpp  llama.cpp  transformer.hpp
planning/: goals.cpp  planner.cpp
scripts/: build.sh  deploy.sh
src/: main.cpp
src/core/: engine.cpp  engine.hpp  state.cpp  state.hpp
src/memory/: episodic.cpp  memory_store.cpp  semantic.cpp
src/utils/: logger.cpp  logger.hpp
src/vision/: detector.cpp  detector.hpp  processor.cpp  processor.hpp
